# crux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  install.sh  mkdocs.yml  pyproject.toml  versions.json
.claude-plugin/: plugin.json
.claude/skills/: release-workflow.md
.githooks/: _ensure_uv.sh  commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1/changelog/: index.html
0.0.1/cli/: index.html
0.0.1/getting-started/: index.html
0.0.1/guides/: index.html
0.0.1/overrides/: home.html
0.0.1/search/: search_index.json
0.0.1/stylesheets/: extra.css
0.0.1/why-crux/: index.html
1.0.1/: objects.inv  sitemap.xml
1.0.1/changelog/: index.html
1.0.1/cli/: index.html
1.0.1/getting-started/: index.html
1.0.1/guides/: index.html
1.0.1/search/: search_index.json
1.0.1/why-crux/: index.html
1.0.2/: sitemap.xml
1.0.2/search/: search_index.json
1.0.3/: objects.inv
1.0.3/overrides/: home.html
1.0.3/search/: search_index.json
1.0.5/: sitemap.xml
1.0.5/overrides/: home.html
1.0.5/stylesheets/: extra.css
dev/: 404.html  index.html  sitemap.xml
dev/api/: index.html
dev/changelog/: index.html
dev/cli/: index.html
dev/getting-started/: index.html
dev/guides/: index.html
dev/overrides/: home.html
dev/search/: search_index.json
dev/why-crux/: index.html
docs/: changelog.md  index.md  why-crux.md
docs/api/: config.md  health.md  index.md  manifest.md  mcp_config.md  paths.md  preflight.md  projects.md  registry.md  sandbox.md  secrets.md  setup.md  sync.md  validation.md  version.md
docs/cli/: add.md  doctor.md  index.md  init.md  install.md  list.md  mcp-add.md  mcp-auth.md  mcp-list.md  mcp-remove.md  mcp-search.md  mcp-status.md  mcp-upgrade.md  project-create.md  project-install.md  project-status.md  project-sync.md  remove.md  (+17 more)
hooks/: hooks.json
tests/: conftest.py
(+281 files in other folders)
