[project]
name = "crux-cli"
version = "1.0.2"
description = "Crux OS — Agentic AI control plane"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "packaging",
]

[project.scripts]
crux = "crux_cli.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-subtests>=0.11",
    "ruff>=0.4",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mike>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crux_cli = ["data/skills/crux/SKILL.md", "data/launchers/*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: real subprocess calls (skipped in fast CI lane)",
    "integration: integration tests that invoke the CLI",
    "unit: pure unit tests",
    "macos: requires macOS security framework",
    "e2e: end-to-end tests with real auth flows and fixture MCP server",
]

[tool.coverage.run]
source = ["crux_cli"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["crux_cli"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S108"]  # assert and /tmp paths are expected in tests
"tests/**/conftest.py" = ["S101", "S603"]  # subprocess in test helpers
"src/crux_cli/cli/commands/mcp.py" = ["S602", "S603", "S606", "S607"]  # subprocess calls with git/crux
"src/crux_cli/cli/commands/skill.py" = ["S603", "S607"]  # subprocess calls with git
"src/crux_cli/cli/commands/doctor.py" = ["S603"]  # subprocess for setup_cmd
